<resources>
    <string name="new_card">New Card</string>
    <string name="app_name">KotlinCard</string>
    <string name="card_front">Card Front</string>
    <string name="card_back">Card Back</string>
    <string name="set_name_display">Name:</string>
    <string name="new_set">New Set</string>
    <string name="set_section_display">Section:</string>
    <string name="url_swift_keywords">"https://raw.githubusercontent.com/WillyScott/AndroidProgramming3rd/master/ap7.json"</string>
    <string name="card_count_display">Count:</string>
    <string name="set_description_display">Description:</string>
    <string name="front_card">Front:</string>
    <string name="back_card">Back:</string>
    <string name="show_card_checkbox">Show the card:</string>
    <string name="front_card_hint">Front of the flashcard.</string>
    <string name="back_card_hint">Back of the flashcard.</string>
    <string name="new_flashcard">New flashcard</string>
    <string name="save_button">Save</string>
    <string name="set_name">Set Name:</string>
    <string name="set_description">Set Description:</string>
    <string name="set_section">Set Section:</string>
    <string name="checkbox_randomize">Randomize</string>
    <string name="checkbox_reverse">Reverse</string>
    <string name="checkbox_reverse_hint">Switches front and back of the cards during play</string>
    <string name="checkbox_randomize_hint">Randomizes cards during play</string>
    <string name="set_import_url">URL:</string>
    <string name="set_section_hint">Select a section to group like flashcards</string>
    <string name="true_show">true</string>
    <string name="exportfile">Export to file</string>
    <string name="filecvs">CVS</string>
    <string name="filejson">JSON</string>
    <string name="alertclipboard">Copied to clipboard</string>
    <string name="app_help">Help</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="app_help_text">KotlinCard Help:\n
\n
Support site: https://swiftcard.wordpress.com\n
Support site with flashcard data to download:\n
\n
    https://github.com/WillyScott/FlashCardsData\n
    https://github.com/WillyScott/AndroidProgramming3rd\n
    https://github.com/WillyScott/FlashCardsKotlin\n
 \n
 To get a URL to download navigate to one of the directories\n
 and select it.  Determine what flashcard data you want to\n
 load and select the data and then the raw button above it.\n
 Below is a example of a URL that can be loaded.  Copy\n
 the URL in your browsers URL field to the Set card URL field.\n
\n
   https://github.com/WillyScott/AndroidProgramming3rd/blob/master/ap7.json\n
\n
\n
About:\n
\n
KotlinCard is a simple flashcard app to learn Googles\n
new programming language Kotlin.  Flashcards of all subjects\n
can be created and loaded.  Very large data sets can\n
be uploaded quickly.  The application is free to use and\n
doesn\'t require the user to sign in.\n
\n
Using:\n
\n
KotlinCards comes with 2 default sets of flashcards,\n
\"Introduction to the application\“ and \“Kotlin Keywords\”.\n
The \"Kotlin Keywords\" is not complete.\n
Review the introduction to learn how to navigate the application.</string>
</resources>
