<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:clickable="true"
    android:layout_margin="8dp"
    android:background="?android:attr/selectableItemBackground">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_name_display"/>

        <TextView
            android:id="@+id/set_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_name" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_description_display"/>


        <TextView
            android:id="@+id/set_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_description"
            android:maxLines="1"
            android:ellipsize="end" />

    </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_section_display" />

            <TextView
                android:id="@+id/set_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_section" />

            <TextView
                android:id="@+id/set_card_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="111" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>